:| nothing is working makefile wise

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,13 +18,20 @@ set(MAIN_DIR ${PROJECT_SOURCE_DIR}/src/main)
 set(TESTS_DIR ${PROJECT_SOURCE_DIR}/tests)
 set(OUT_DIR ${PROJECT_SOURCE_DIR}/src/output)
 set(RUN_DIR ${PROJECT_SOURCE_DIR}/run)
-set(AACGM_INCLUDE ${PROJECT_SOURCE_DIR}/include/aacgm)
+set(AACGM_INCLUDE ${PROJECT_SOURCE_DIR}/include/aacgm/*.h)
+
+# aacgm
+add_library(aacgm ${PROJECT_SOURCE_DIR}/include/aacgm.cpp ${AACGM_INCLUDE})
+target_include_directories(aacgm PUBLIC ${PROJECT_SOURCE_DIR})
 
 if(TEST_INTERPOLATION)
-  add_executable(aether ${SRC_FILES} ${MSIS_FILES} ${MAIN_DIR}/main_test_interpolation.cpp)
+  add_executable(aether ${SRC_FILES} ${MSIS_FILES} ${AACGM_INCLUDE} ${MAIN_DIR}/main_test_interpolation.cpp)
 else()
-  add_executable(aether ${SRC_FILES} ${MSIS_FILES} ${MAIN_DIR}/main.cpp)
+  add_executable(aether ${SRC_FILES} ${MSIS_FILES} ${AACGM_INCLUDE} ${MAIN_DIR}/main.cpp)
 endif()
+
+# aacgm
+target_include_directories(aether PUBLIC ${PROJECT_SOURCE_DIR})
 
 if(USE_DOUBLE_PRECISION)
   add_compile_definitions(AETHER_USE_PRECISION_DOUBLE)
@@ -66,10 +73,6 @@ elseif(ARMADILLO_FOUND)
   target_link_libraries(aether PUBLIC ${ARMADILLO_LIBRARIES})
 endif()
 
-#aacgm include
-target_include_directories(aether PUBLIC ${AACGM_INCLUDE})
-target_link_libraries(aether PUBLIC ${AACGM_INCLUDE})
-
 find_package(OpenMP)
 if(OPENMP_FOUND)
   target_include_directories(aether PUBLIC ${MPI_CXX_INCLUDE_DIRS})
@@ -94,11 +97,6 @@ if (USE_NETCDF)
   target_link_libraries(aether PUBLIC ${NETCDF_LIBRARIES_CXX})
   target_link_libraries(aether PUBLIC ${NETCDF_LIBRARIES_C})
 endif()
-
-# Set up links for aacgm/igrf functionality
-#include_directories(${AACGM_INCLUDE})
-file(CREATE_LINK ${AACGM_INCLUDE}
-${PROJECT_SOURCE_DIR}/share/include SYMBOLIC)
 
 # Set up links for executable
 file(CREATE_LINK ${CMAKE_BINARY_DIR}/aether
